--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "version": 2
 }
-```
-
-## **Your folder structure should be:**
-```
-your-project/
-├── index.html
-└── vercel.json
